# asyncio

./: .gitignore  CMakeLists.txt  ROADMAP.md  TODO.md
.workbuddy/memory/: 2026-05-07.md  2026-05-08.md  MEMORY.md
benchmarks/: CMakeLists.txt  select_vs_epoll_benchmark.cc  select_vs_epoll_benchmark.py  select_vs_epoll_results.csv
docs/: bind.md  cloexec.md  fork.md  pipe.md  socket.md
include/asyncio/: config.hh  dns.h  error.h  event_loop.h  future.h  gather.h  handle.h  policy.h  runner.h  shield.h  sleep.h  subprocess.h  task.h  task_group.h  timer_handle.h  wait.h
include/asyncio/backend/: selector.hh  selector_backend.h  selector_epoll.h  selector_kqueue.h  selector_select.hh  wakeup_pipe.hh
include/asyncio/detail/: selector.h  selector_select.h  self_pipe.h  timer_heap.h
include/asyncio/socket/: socket_base.h  socket_ops.h  socket_os.h
include/asyncio/stream/: connection.h  stream_reader.h  stream_writer.h
include/asyncio/sync/: barrier.h  condition.h  event.h  lifo_queue.h  lock.h  priority_queue.h  queue.h  semaphore.h
include/asyncio/transport/: protocol.h  transport.h
src/: CMakeLists.txt  dns.cc  event_loop.cc  handle.cc  policy.cc  sleep.cc  subprocess.cc  timer_handle.cc
src/backend/: selector.cc  selector_epoll.cc  selector_kqueue.cc  selector_select.cc  wakeup_pipe.cc
src/detail/: selector_select.cc  self_pipe.cc  timer_heap.cc
src/socket/: socket_base.cc  socket_ops.cc
src/stream/: connection.cc  stream_reader.cc  stream_writer.cc
src/transport/: protocol.cc  transport.cc
tests/: CMakeLists.txt  dns_test.cc  event_loop_test.cc  future_test.cc  gather_test.cc  handle_test.cc  policy_test.cc  queue_ext_test.cc  runner_test.cc  selector_select_test.cc  selector_test.cc  shield_test.cc  sleep_test.cc  socket_test.cc  stream_test.cc  subprocess_test.cc  task_group_test.cc  task_test.cc  timer_heap_test.cc  wait_test.cc
tests/sync/: barrier_test.cc  condition_test.cc  event_test.cc  lock_test.cc  queue_test.cc  semaphore_test.cc
